lab1/Test/L1-A-4-51.cmm
int ezpUoyS0fJNiKP ( {
  if ( ! AeBb3rDuo0 - geac - yEiCDf8D0laP - mqfALdRN6Z0C 
    - Ij + vHaWmJ + + FIOg - Vxv_rk36jv8tc < MPE0yBhl6ZCaW 
    < cbEbkU > nJvTYqD6 >= IIUq == QKNXmAuls7UHVKNU == 
    Jq8HAHp <= kP2ONYKb3NLr_0gbAQgI <= sV && kzaY || VX755zgdKzmr_oM 
    )   if ( t )   if YvlSDbuU3Jrw49i7y )   yvTYfB739QwX7O_tlBk 
    ;> 



}
struct ;
struct ;
struct u81jl return ;
int 